--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,7 @@
-::placeholder {
-	color: gray;
-}
+#kalita-player {
+	display: flex;
 
-.image {
-	background-image: url(image@1x.png);
-}
-@media (min-resolution: 2dppx) {
-	.image {
-		background-image: url(image@2x.png);
+	.kalita-control,
+	.kalita-slider {
 	}
 }
