--- a/demo/style.css
+++ b/demo/style.css
@@ -1,8 +1,10 @@
 body {
-	font-family: Helvetica, Arial, Lucida Grande, sans-serif;
+	font-family: Arial, Lucida Grande, sans-serif;
 	width: 100%;
 	max-width: 700px;
 	margin: 100px auto;
+	padding: 10px;
+	box-sizing: border-box;
 }
 
 p,
