Add option to close player

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,10 @@ $highlight-word: #a4cbff;
 	font-family: Arial, Lucida Grande, sans-serif;
 	display: flex;
 	align-items: center;
+
+	&[aria-hidden="true"] {
+		display: none;
+	}
 }
 
 .kalita-popup {
